[package]
edition = "2021"
name = "ddcutil-sys"
version = "0.0.3"
authors = ["arcnmx"]

description = "libddcutil FFI bindings"
keywords = ["ddcci", "ddc", "ci", "ddcutil", "vcp"]

documentation = "http://arcnmx.github.io/ddcutil-rs/ddcutil_sys"
repository = "https://github.com/arcnmx/ddcutil-rs"
readme = "../README.md"
license = "GPL-2.0+"

[badges]
travis-ci = { repository = "arcnmx/ddcutil-rs" }
maintenance = { status = "passively-maintained" }

[dependencies]

[build-dependencies]
bindgen = "0.63"
pkg-config = "0.3"
