[package]
edition = "2021"
name = "ddcutil-sys"
version = "0.0.4"
authors = ["arcnmx", "Quang Ngô <ngoquang2708@gmail.com>"]

description = "libddcutil FFI bindings"
keywords = ["ddcci", "ddc", "ci", "ddcutil", "vcp"]

documentation = "http://arcnmx.github.io/ddcutil-rs/ddcutil_sys"
repository = "https://github.com/arcnmx/ddcutil-rs"
readme = "../README.md"
license = "GPL-2.0+"

[badges]
travis-ci = { repository = "arcnmx/ddcutil-rs" }
maintenance = { status = "passively-maintained" }

[dependencies]

[build-dependencies]
bindgen = "0.69.4"
system-deps = "7.0.1"

[package.metadata.system-deps]
ddcutil = "1.3.0"
